front-end/src/pages/post/CreatePost.css
.create-post-container {
  background-color: var(--color-light);
}

.post-body-container {
  min-height: 70vh;
}
.create-post-header-main {
  padding: 2rem 3rem;
}

.create-post-body-container {
  padding: 2rem 3rem;
  height: 100%;
}

.post_header-input {
  border: none;
  font-size: var(--font-lg);
}
.create-post-button {
  display: inline;
  border-radius: 6px;
  padding: 0.8rem 0.6rem;
  color: var(--color-dark);
  cursor: pointer;
}

.create-post-top-nav button:hover {
  background-color: var(--color-light);
  color: var(--color-main);
}

.preview-active {
  background-color: var(--color-light);
  color: var(--color-main);
}

/* .create-post__add-cover-image::-webkit-file-upload-button {
  visibility: hidden;
} */

/* .create-post__add-cover-image {
  padding: 0.6rem 0.8rem;
}

.create-post__add-cover-image::before {
  content: 'Add a cover image';
  border: 1px solid var(--color-dark);
  border-radius: 5px;
  margin-top: 1rem;
  padding: 0.6rem 0.8rem;
  outline: none;
  white-space: nowrap;
  -webkit-user-select: none;
  cursor: pointer;
  width: 30%;
} */

